fix(front): disable flickering on modal open

--- a/front/src/App.less
+++ b/front/src/App.less
@@ -11,6 +11,7 @@ body {
   background-color: @background;
   padding: @padding-big;
   overflow: hidden;
+  width: 100% !important; // disable antd flicker problem
 }
 
 ::-webkit-scrollbar {
